# OpenBB_GG

./: BIOTECH_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md
examples/: README.md  biotechResearch.ipynb  biotech_trials_example.py
openbb_platform/core/openbb_core/provider/standard_models/: clinical_trial_details.py  clinical_trial_search.py
openbb_platform/core/tests/provider/standard_models/: test_biotech_models.py
openbb_platform/extensions/biotech/: ARCHITECTURE.md  GETTING_STARTED.md  README.md  pyproject.toml
openbb_platform/extensions/biotech/openbb_biotech/: __init__.py  biotech_router.py
openbb_platform/extensions/biotech/openbb_biotech/pipeline/: __init__.py  pipeline_router.py
openbb_platform/extensions/biotech/openbb_biotech/trials/: __init__.py  trials_router.py
openbb_platform/extensions/biotech/tests/: test_biotech_extension.py  test_biotech_router.py
openbb_platform/providers/clinicaltrials/: README.md  pyproject.toml
openbb_platform/providers/clinicaltrials/openbb_clinicaltrials/: __init__.py
openbb_platform/providers/clinicaltrials/openbb_clinicaltrials/models/: __init__.py  clinical_trial_details.py  clinical_trial_search.py
openbb_platform/providers/clinicaltrials/openbb_clinicaltrials/utils/: __init__.py  helpers.py
openbb_platform/providers/clinicaltrials/tests/: test_clinicaltrials_provider.py  test_provider.py
