[tool.poetry]
name = "openbb-clinicaltrials"
version = "1.0.0"
description = "ClinicalTrials.gov data provider for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_clinicaltrials" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
openbb-core = "^1.4.8"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider"]
clinicaltrials = "openbb_clinicaltrials:clinicaltrials_provider"
